--- a/.github/workflows/build-on-pull-request.yaml
+++ b/.github/workflows/build-on-pull-request.yaml
@@ -1,13 +1,6 @@
 name: Build FFmpeg on Pull request
-on:
-  pull_request_target:
-    paths:
-      - ffmpeg-source
-      - ffmpeg-windows-build-helpers
-      - dependencies.sh
-      - .github/workflows/build-on-push.yaml
-      - .github/workflows/build-on-pull-request.yaml
-      
+on: workflow_dispatch
+
 jobs:
   build:
     runs-on: ubuntu-20.04
