--- a/.github/workflows/build-on-pull-request.yaml
+++ b/.github/workflows/build-on-pull-request.yaml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-20.04
-    if: github.actor == 'dependabot[bot]' || github.actor == 'AnimMouse'
+    if: github.actor == 'dependabot[bot]' || github.actor == 'builderxp99'
     strategy:
       matrix:
         os: [win64, win32]
